Time: 35 ms (5.06%) | Memory: 101.2 MB (5.04%) - LeetSync